deploy/kubernetes/landingpage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landingpage-uareviews
  namespace: uareviews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landingpage-uareviews
  template:
    metadata:
      labels:
        app: landingpage-uareviews
    spec:
      containers:
      - name: landingpage-uareviews
        image: registry.deti/uareviews/landingpage
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
               - key: nginx.conf
                 path: nginx.conf
