deploy/kubernetes/landingpage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landingpage-uareviews
  namespace: uareviews
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: landingpage-uareviews
