deploy/kubernetes/landingpage/deployement_vol_conf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landingpage-uareviews
  namespace: uareviews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landingpage-uareviews
  template:
    metadata:
      labels:
        app: landingpage-uareviews
    spec:
      containers:
      - name: landingpage-uareviews
        image: registry.deti/uareviews/landingpage
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/nginx.conf
          subPath: nginx.conf
          readOnly: true
        - name : nginx-static
          mountPath: /var/www
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
               - key: nginx.conf
                 path: nginx.conf
        - name: nginx-static
          persistentVolumeClaim:
            claimName: nginx-static-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: landingpage-uareviews
  namespace: uareviews
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: landingpage-uareviews

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landingpage-uareviews-k3s
  namespace: uareviews
  annotations:
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: landingpage.uareviews.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landingpage-uareviews
            port:
              number: 80


# NGINX Config map
